--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm-run-all": "^4.0.1"
   },
   "scripts": {
+    "dev": "parcel src/index.html",
     "server:livereload": "livereload ./app",
     "server:serve": "http-server ./app -p 8080",
     "prestart": "npm install",
