--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,12 @@
 {
+  "plugins": [
+    [
+      "transform-runtime",
+      {
+        "polyfill": false,
+        "regenerator": true
+      }
+    ]
+  ],
   "presets": ["env"]
 }
